<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkground" >

    <!--
         <Button
        android:id="@+id/btnGoogle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:layout_toLeftOf="@+id/btnLostPwd"
        android:background="@drawable/button_image_google" />
    -->

    <Button
        android:id="@+id/btnFbk"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/fb" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@+id/btnLoginTwitter"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:src="@drawable/logo" />

    <CheckBox
        android:id="@+id/chkRemeber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_username"
        android:layout_alignTop="@+id/btnLogin"
        android:text="@string/remember"
        android:textSize="12sp" 
        android:textStyle="bold"/>

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#0a2a0a" />

    <TextView
        android:id="@+id/btnLostPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txt_username"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="14dp"
        android:text="@string/pwd_lost" 
        android:textColor="#000000" 
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:layout_marginLeft="5dp"
        android:textColor="#f7cf09" 
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="@string/register" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/no_account"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/background_light"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btnLoginTwitter"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:layout_alignBaseline="@+id/btnFbk"
        android:layout_alignBottom="@+id/btnFbk"
        android:layout_alignRight="@+id/btnLogin"
        android:background="@drawable/twitter" />

    <EditText
        android:id="@+id/txt_pwd"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/btnFbk"
        android:layout_alignRight="@+id/btnLogin"
        android:layout_below="@+id/txt_username"
        android:layout_marginTop="17dp"
        android:background="@drawable/rounded_corner_edit"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/btnFbk"
        android:layout_alignRight="@+id/txt_pwd"
        android:layout_below="@+id/btnFbk"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner_edit"
        android:ems="10">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnLogin"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="110dp"
        android:layout_height="38dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txt_pwd"
        android:layout_marginTop="24dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/signin" />

</RelativeLayout>