<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkground" >

    <ImageView
        android:id="@+id/imageInfoUsr"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/editTextRegUsrName"
        android:layout_marginRight="10dp"
        android:src="@drawable/help_icon" />

    <ImageView
        android:id="@+id/imageInfoTeam"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/imageInfoUsr"
        android:layout_alignTop="@+id/spinnerTeam"
        android:src="@drawable/help_icon" />

    <ImageView
        android:id="@+id/imageInfoCountry"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/imageInfoTeam"
        android:layout_alignRight="@+id/imageInfoTeam"
        android:layout_alignTop="@+id/spinnerCountry"
        android:src="@drawable/help_icon" />


    <EditText
        android:id="@+id/editTextRegUsrName"
        android:layout_width="wrap_content"
         android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/editTextPwd"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_corner_edit"
        android:ems="8"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editTextPwd"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextRegUsrName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/imageInfoUsr"
        android:background="@drawable/rounded_corner_edit"
        android:ems="8"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextConfirmPwd"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextPwd"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/imageInfoUsr"
        android:background="@drawable/rounded_corner_edit"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextNickName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextConfirmPwd"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/imageInfoCountry"
        android:background="@drawable/rounded_corner_edit"
        android:ems="8"/>

    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextNickName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/imageInfoCountry"
        android:prompt="@string/country" 
        android:background="@android:drawable/editbox_background"
         android:spinnerMode="dialog"
       />

    <Spinner
        android:id="@+id/spinnerTeam"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/spinnerCountry"
        android:layout_below="@+id/spinnerCountry"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp" 
        android:background="@android:drawable/editbox_background"
         android:prompt="@string/fav_team" 
        android:spinnerMode="dialog"/>

    <Button
        android:id="@+id/btnRegisterCancel"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_below="@+id/spinnerTeam"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/btnRegisterSave"
        android:background="@drawable/cancel" />

    <Button
        android:id="@+id/btnRegisterSave"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/btnRegisterCancel"
        android:layout_alignBottom="@+id/btnRegisterCancel"
        android:layout_alignRight="@+id/spinnerTeam"
        android:background="@drawable/register" />

</RelativeLayout>